--- a/MyWebsite/Views/Account/ForgotPassword.cshtml
+++ b/MyWebsite/Views/Account/ForgotPassword.cshtml
@@ -15,7 +15,7 @@
                             <input asp-for="Email" style="color: #cfd8dc" />
                             <span asp-validation-for="Email"></span>
                         </div>
-                        <button style="margin-top:10px; background-color:#81cac4; font-weight:bold;" type="submit" class=" waves-effect waves-light lightTeal-hover btn sharpCorners black-text">Reset Password</button>
+                        <button style="margin-top:10px;" type="submit" class=" waves-effect waves-light btn sharpCorners black-btn">Reset Password</button>
                     </form>
                 </div>
                 <div style="margin-top: 10px;">
