--- a/MyWebsite/Views/Account/Login.cshtml
+++ b/MyWebsite/Views/Account/Login.cshtml
@@ -35,7 +35,7 @@
                 @Html.Hidden("AppType", appType)
                 <div>
                     <div><p style="color: #D50000;">@error</p></div>
-                    <button type="submit" class="waves-effect waves-light btn lightTeal-hover sharpCorners black-text" style="background-color: #81cac4; font-weight: bold;">Log in</button>
+                    <button type="submit" class="waves-effect waves-light btn sharpCorners black-btn">Log in</button>
                 </div>
                 <div>
                     <p><a class="hover-underline" asp-action="ForgotPassword">Forgot your password?</a></p>
