--- a/MyWebsite/Views/Account/Register.cshtml
+++ b/MyWebsite/Views/Account/Register.cshtml
@@ -24,7 +24,7 @@
                     <input asp-for="ConfirmPassword" style="color: #cfd8dc"/>
                     <span asp-validation-for="ConfirmPassword" style="color: #cfd8dc" ></span>
                 </div>
-                <button style="margin-top:10px; background-color:#81cac4; font-weight:bold;" type="submit" class=" waves-effect waves-light lightTeal-hover btn sharpCorners black-text">Register</button>
+                <button style="margin-top:10px;" type="submit" class=" waves-effect waves-light btn sharpCorners black-btn">Register</button>
             </form>
             <div style="margin-top: 10px;">
                 <a class="hover-underline" onclick="window.history.go(-1)">Cancel</a>
