--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -7,30 +7,29 @@
 }
 
 
-<div style="text-align:center; margin-top:80px;"><p style="text-align:center;">@Html.Partial("_LoginPartial", 1)</p></div>
-<h3 style="text-align:center; margin-top:100px;">The Painless Budget</h3>
-<div style="border-bottom: 1px solid #cfd8dc;"></div>
+<div style="text-align:center; margin-top:100px;"><p style="text-align:center;">@Html.Partial("_LoginPartial", 1)</p></div>
+<h3 style="text-align:center; margin-top:100px; text-decoration: underline">The Painless Budget</h3>
 
 
 <div class="container">
     <div style="margin-top: 25px; text-align: center;">
-        <p style="text-align:center; font-weight:bold; color:#81cac4; margin-top:10px;">@ViewBag.Deleted</p>
+        <p style="text-align:center; font-weight:bold; color:#54b798; margin-top:10px;">@ViewBag.Deleted</p>
         <a href='@Url.Action("Index", "Budgets", new {userName = user})'; class="waves-effect waves-light btn-large sharpCorners lightBrown-hover grey darken-4" style="font-weight: bold; font-size: 20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
         @*@Html.ActionLink("Return to Budget", "Index", "Budgets", new { userName = user }, new { @class = "grey-button" })*@
     </div>
-    <h4 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">Add Transaction</h4>
+    <h4 style="margin-top:55px; margin-bottom:25px; font-weight:bold; text-align:center">Add Transaction</h4>
     @*Validation Errors*@
     <div class="container" style="margin-top:20px;">
         <p style="font-weight:bold; color:#D50000; text-align:center">@ViewBag.typeError</p>
         <p style="font-weight:bold; color:#D50000; text-align:center">@ViewBag.costError</p>
-        <p style="text-align:center; font-weight:bold; color:#81cac4; margin-top:10px;">@ViewBag.SuccessTransactionAdded</p>
+        <p style="text-align:center; font-weight:bold; color: #54b798; margin-top:10px;">@ViewBag.SuccessTransactionAdded</p>
     </div>
     <div class="row">
         <div class="col s12 m12 l4"></div>
-        <form asp-action="AddTransaction" class="col s12 m12 l4 center z-depth-2" style="border: solid 3px #212121">
+        <form asp-action="AddTransaction" class="col s12 m12 l4 center z-depth-2" style="border: 1px dotted #cfd8dc">
             <div class="input-field col s12" style="margin-bottom:35px; margin-top:35px;">
                 <select name="TypeOfBudget">
-                    <option value="0" disabled selected>Select a Category </option>
+                    <option value="0" disabled selected>1. Select a Category</option>
                     <option value="1">Grocery</option>
                     <option value="2">Housing</option>
                     <option value="3">Bills</option>
@@ -39,11 +38,11 @@
                     <option value="6">Miscellaneous</option>
                 </select>
             </div>
-            <h5>Description</h5>
+            <h5><b>2. Description</b></h5>
             <div class="input-field">
-                <input name="Description" placeholder=" Enter item description..." id="purchase-item" style="margin-top: 25px; background-color: black !important;" type="text" class="validate">
+                <input name="Description" placeholder=" ..." id="purchase-item" style="margin-top: 25px; background-color: #080C10!important;" type="text" class="validate">
             </div>
-            <h5 style="margin-top:25px;">Price</h5>
+            <h5 style="margin-top:25px;"><b>3. Price</b></h5>
             <div class="input-field" style="margin-bottom: 10px;">
                 <i class="material-icons prefix" style="margin-top:30px; color:#54b798">attach_money</i>
                 <input name="Cost" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
@@ -53,7 +52,7 @@
                 @Html.Hidden("TypeOfBudget", "TypeOfBudget")
                 @Html.Hidden("Date", DateTime.Now)
                 @Html.Hidden("Month", budgetMonth)
-                <div style="margin-top:23px;"><button type="submit" class="btn-floating btn-large add-btn waves-effect waves-light blue-grey lighten-4"><i class="material-icons" style="font-weight:bold; color: #212121 !important;">library_add</i></button></div>
+                <div style="margin-top:23px;"><h5><b>4. Save</b></h5> <button type="submit" class="btn-floating btn-large waves-effect waves-light blue-grey lighten-4"><i class="material-icons add-btn" style="font-weight:bold; color: #212121 !important;">library_add</i></button></div>
             </div>
         </form>
         <div class="col s12 m12 l4"></div>
@@ -226,62 +225,9 @@
     </table>
 </div>
 
-
 <style>
-
-    .dropdown-content li > a, .dropdown-content li > span {
-        color: #cfd8dc !important;
-        font-size: 20px !important;
-        font-weight: bold;
-        text-align: center;
-        background-color: #212121 !important;
-    }
-
-    .dropdown-content li > a, .dropdown-content li > span:hover {
-        background-color: #cfd8dc !important;
-        color: #212121 !important;
-    }
-
-    .select-dropdown li.disabled, .select-dropdown li.disabled > span, .select-dropdown li.optgroup {
-        color: black !important;
-        font-weight: bold;
-        text-align: center;
-    }
-
-    .select-wrapper input.select-dropdown {
-        border-bottom: none!important; 
-    }
-
-    .select-wrapper input.select-dropdown {
-        color: #424242 !important;
-        font-weight: bold !important;
-        font-size: 25px;
-        text-align: center;
-        background-color: #cfd8dc !important;
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-
-    .select-wrapper input.select-dropdown:hover {
-        background-color: #54b798 !important;
-        color: #424242 !important;
-    }
-
-    .trashcan-icon{
-        color: #cfd8dc !important;
-
-    }
-
-    .trashcan-icon:hover {
-        color: #54b798 !important;
-    }
-
     .lightBrown-hover:hover {
-        background-color: #424242 !important;
-    }
-
-    .add-btn:hover {
-        background-color: #54b798 !important;
+        text-decoration: underline;
     }
 </style>
 
@@ -387,7 +333,6 @@
             clickedM = true;
         }
     });
-
     
 </script>
 
