--- a/MyWebsite/Views/Budgets/Index.cshtml
+++ b/MyWebsite/Views/Budgets/Index.cshtml
@@ -1,69 +1,60 @@
 ﻿@model IEnumerable<MyWebsite.Models.BudgetProject.Budget>
-@using Microsoft.AspNetCore.Identity
-@using System.Linq
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+@using System.Linq
 
-
-
-@{  string user = User.Identity.Name;
-    var limit = Convert.ToInt32(TempData["totalLimit"]);
-    var spent = Convert.ToInt32(TempData["totalSpent"]);
-    int budgetMonth = DateTime.Now.Month;
-    int appType = Convert.ToInt32(TempData["AppType"]);
+@{ 
+    var user = User.Identity.Name;
+    var budgetMonth = DateTime.Now.Month;
     var currentMonth = DateTime.Now.ToString("MMMM");
 }
 
 <div style="text-align:center; margin-top:100px;"><p style="text-align:center;">@Html.Partial("_LoginPartial", 1)</p></div>
-<h3 style="text-align:center; margin-top:100px;">The Painless Budget</h3>
-<div style="border-bottom: 1px dotted #cfd8dc;"></div>
+<h3 style="text-align:center; margin-top:100px; text-decoration: underline">The Painless Budget</h3>
 
-@if (!SignInManager.IsSignedIn(User))
+@if (!SignInManager.IsSignedIn(User)) 
 {
     <p style="text-align:center; font-size:20px; margin-top:30px; margin-bottom: 500px;">Please log in or register first to use the app.</p>
 }
+
 else
 {
     if (ViewBag.EmptyBudget)
     {
         if (ViewBag.HasPastBudget)
         {
-            <div style="border-bottom: 1px dotted #b2dfdb;"></div>
             <h3 style="text-align:center; color:#cfd8dc; font-weight:bold; margin-bottom:15px;">@currentMonth</h3>
-            <h5 style="text-align: center;">A budget has not yet been created for the month of @currentMonth.</h5>
+            <h5 style="text-align: center; color: #54b798; margin-bottom: 50px;">A budget has not yet been created for the month of @currentMonth.</h5>
             <div style="margin-top:35px;">
                 <div class="row">
                     <div class="col l12 m12 s12" align="center">
-                        @*Wants to use past budget limit*@
+                        @*Use past budget limit for this month?*@
                         <form method="post" action="@Url.Action("Index", "Budgets", new { usePastBudgetLimit = ViewBag.HasPastBudget })">
-                            @*Use last month's set budget limits*@
-                            <button class="waves-effect waves-light btn-large grey darken-3 lighterBrown-hover sharpCorners" style="font-weight:bold; font-size:20px; margin-top: 10px; margin-bottom: 5px;" type="submit" name="Save">
-                                <i class="material-icons left">replay</i>Use Last Month's Budget Limits for @currentMonth
+                            <button class="waves-effect waves-light btn-large grey darken-3 lightBrown-hover sharpCorners" style="font-weight:bold; color: #54b798 !important; font-size:20px; margin-top: 10px; margin-bottom: 5px;" type="submit" name="Save">
+                                <i class="material-icons left">replay</i>Use<span style="color:#cfd8dc;"> Last Month's</span> Budget Limits for @currentMonth
                             </button>
                             @Html.Hidden("Email", user)
                             @Html.Hidden("Month", DateTime.Now.Month)
                         </form>
-                        <button id="unhide-set-budget-form" class="waves-effect waves-light lightBrown-hover btn-large grey darken-4 sharpCorners" style="font-weight:bold; font-size:20px; margin-top:10px;">
-                            <i class="material-icons left">create</i>Create New Budget Limits
+                        <button id="unhide-set-budget-form" class="waves-effect waves-light lightBrown-hover btn-large grey darken-4 sharpCorners" style="font-weight:bold; font-size:20px; margin-top:30px;">
+                            <i class="material-icons left">create</i>Create <span style="color:#54b798">New</span> Budget Limits
                         </button>
-                        <a href='@Url.Action("PastBudgets", "Budgets")' class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">date_range</i>View Past Budgets</a>
-                        <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect lightBrown-hover waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">trending_up</i>Budget Analytics</a>
-                        <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">insert_chart</i>Transfer to Excel</a>
+                        <a href='@Url.Action("PastBudgets", "Budgets")' class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:30px;"><i class="material-icons left">date_range</i>View Past Budgets</a>
+                        <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect lightBrown-hover waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:30px;"><i class="material-icons left">trending_up</i>Budget Analytics</a>
+                        <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:30px;"><i class="material-icons left">insert_chart</i>Transfer to Excel</a>
                     </div>
                 </div>
             </div>
 
-            //Set Budget Form
+            //Set Budget Form - Choose New Limits
             <div id="hidden-set-budget-form" style="display:none;">
-                @*Set Budget Limit - Has had past budgets but wants to choose new limits*@
-                
                 <form method="post" action="@Url.Action("Index", "Budgets", new { usePastBudgetLimit = false })">
                     <div style="margin-top:35px; text-align:center;">
                         <button class="waves-effect waves-light btn-large sharpCorners black-text" style="background-color:#212121; font-weight:bold; font-size:20px;" type="submit" name="Save">
                             <i class="material-icons left">local_atm</i>Save Budget Limits
                         </button>
                     </div>
-                    <div class="row" style="margin-top:20px; margin-left:200px; margin-right:200px;">
+                    <div class="row" style="margin-top:20px; margin-left: 200px; margin-right: 200px;">
                         <div class="col s12 m6 l4">
                             <h5 style="margin-top:77px; font-weight:bold;">Groceries/Food</h5>
                             <div class="input-field">
@@ -123,11 +114,9 @@ else
         }
 
 
-        //Has never had budget
-        else
+        else //Has Never Had Budget - Set Limits For First Time
         {
             <div style="border-bottom: 1px dotted #b2dfdb;"></div>
-            @*Set Budget Limit - Has never had budget*@
             <form method="post" action="@Url.Action("Index", "Budgets", new { usePastBudgetLimit = false })">
                 <div style="margin-top:35px; text-align:center;">
                     <button class="waves-effect waves-light btn-large black-text sharpCorners" style="background-color:#b2dfdb; font-weight:bold; font-size:20px;" type="submit" name="Save">
@@ -189,17 +178,16 @@ else
                 @Html.Hidden("MiscLimit", "MiscLimit")
                 @Html.Hidden("Month", DateTime.Now.Month)
             </form>
-
             //End of Set Budget Limit
         }
-
     }
 
-    else
+    else //Has Current Budget to Display
     {
         <div style="margin-top:55px; margin-bottom: 55px; text-align:center;">
-            <h5 style="text-align:center; color:#b2dfdb; margin-top:10px;">@ViewBag.SuccessLimitsUpdated</h5>
+            <h5 style="text-align:center; color:#54b798; margin-top:10px;">@ViewBag.SuccessLimitsUpdated</h5>
             <h3 style="text-align:center; color:#cfd8dc; font-weight:bold; margin-bottom:15px;">@currentMonth</h3>
+
             <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">add_box</i>Add Transaction</a>
             @foreach (var item in Model)
             {
@@ -215,14 +203,11 @@ else
             <div class="container" style="margin-bottom:100px;">
                 <div class="row">
                     <div class="col s12 m12 l6">
-                        @{double remainingG = item.GroceryLimit - Convert.ToInt32(TempData["groceryTotal"]);}
-                        @*More than the total has been spent*@
+                        @{float remainingG = item.GroceryLimit - ViewBag.BudgetTotals[0];}
                         @if (remainingG <= 0)
                         {
                             <h5 style="margin-left:150px;"><span style="color:#e6c5c4">$@remainingG.ToString("#,##0.00")</span></h5>
                         }
-
-                        @*Still some of the budget left*@
                         else
                         {
                             <h5 style="margin-left:150px;"><span style="color:#54b798">$@remainingG.ToString("#,##0.00")</span></h5>
@@ -234,18 +219,15 @@ else
                             remainingG = 0;
                         }
                         <h2 id="totalBudgetG" style="display:none">@remainingG</h2>
-                        <h2 id="totalSpentG" style="display:none">@Convert.ToDouble(TempData["groceryTotal"])</h2>
+                        <h2 id="totalSpentG" style="display:none">@ViewBag.BudgetTotals[0]</h2>
                     </div>
 
                     <div class="col s12 m12 l6">
-                        @{double remainingH = item.HousingLimit - Convert.ToInt32(TempData["housingTotal"]);}
-                        @*More than the total has been spent*@
+                        @{double remainingH = item.HousingLimit - ViewBag.BudgetTotals[1];}
                         @if (remainingH <= 0)
                         {
                             <h5 style="margin-left:150px;"><span style="color:#e6c5c4">$@remainingH.ToString("#,##0.00")</span></h5>
                         }
-
-                        @*Still some of the budget left*@
                         else
                         {
                             <h5 style="margin-left:150px;"><span style="color:#54b798">$@remainingH.ToString("#,##0.00")</span></h5>
@@ -257,20 +239,17 @@ else
                             remainingH = 0;
                         }
                         <h2 id="totalBudgetH" style="display:none">@remainingH</h2>
-                        <h2 id="totalSpentH" style="display:none">@Convert.ToDouble(TempData["housingTotal"])</h2>
+                        <h2 id="totalSpentH" style="display:none">@ViewBag.BudgetTotals[1]</h2>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col s12 m12 l6">
-                        @{double remainingE = item.EntLimit - Convert.ToInt32(TempData["entTotal"]);}
-                        @*More than the total has been spent*@
+                        @{double remainingE = item.EntLimit - ViewBag.BudgetTotals[2];}
                         @if (remainingE <= 0)
                         {
                             <h5 style="margin-left:150px;"><span style="color:#e6c5c4">$@remainingE.ToString("#,##0.00")</span></h5>
                         }
-
-                        @*Still some of the budget left*@
                         else
                         {
                             <h5 style="margin-left:150px;"><span style="color:#54b798">$@remainingE.ToString("#,##0.00")</span></h5>
@@ -282,18 +261,15 @@ else
                             remainingE = 0;
                         }
                         <h2 id="totalBudgetE" style="display:none">@remainingE</h2>
-                        <h2 id="totalSpentE" style="display:none">@Convert.ToDouble(TempData["entTotal"])</h2>
+                        <h2 id="totalSpentE" style="display:none">@ViewBag.BudgetTotals[2]</h2>
                     </div>
 
                     <div class="col s12 m12 l6">
-                        @{double remainingB = item.BillsLimit - Convert.ToInt32(TempData["billsTotal"]);}
-                        @*More than the total has been spent*@
+                        @{double remainingB = item.BillsLimit - ViewBag.BudgetTotals[3];}
                         @if (remainingB <= 0)
                         {
                             <h5 style="margin-left:150px;"><span style="color:#e6c5c4">$@remainingB.ToString("#,##0.00")</span></h5>
                         }
-
-                        @*Still some of the budget left*@
                         else
                         {
                             <h5 style="margin-left:150px;"><span style="color:#54b798">$@remainingB.ToString("#,##0.00")</span></h5>
@@ -305,20 +281,17 @@ else
                             remainingB = 0;
                         }
                         <h2 id="totalBudgetB" style="display:none">@remainingB</h2>
-                        <h2 id="totalSpentB" style="display:none">@Convert.ToDouble(TempData["billsTotal"])</h2>
+                        <h2 id="totalSpentB" style="display:none">@ViewBag.BudgetTotals[3]</h2>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col s12 m12 l6">
-                        @{double remainingGas = item.GasLimit - Convert.ToInt32(TempData["gasTotal"]);}
-                        @*More than the total has been spent*@
+                        @{double remainingGas = item.GasLimit - ViewBag.BudgetTotals[4];}
                         @if (remainingGas <= 0)
                         {
                             <h5 style="margin-left:150px;"><span style="color:#e6c5c4">$@remainingH.ToString("#,##0.00")</span></h5>
                         }
-
-                        @*Still some of the budget left*@
                         else
                         {
                             <h5 style="margin-left:150px;"><span style="color:#54b798">$@remainingGas.ToString("#,##0.00")</span></h5>
@@ -330,18 +303,15 @@ else
                             remainingGas = 0;
                         }
                         <h2 id="totalBudgetGas" style="display:none">@remainingGas</h2>
-                        <h2 id="totalSpentGas" style="display:none">@Convert.ToDouble(TempData["gasTotal"])</h2>
+                        <h2 id="totalSpentGas" style="display:none">@ViewBag.BudgetTotals[4]</h2>
                     </div>
 
                     <div class="col s12 m12 l6">
-                        @{double remainingM = item.MiscLimit - Convert.ToDouble(TempData["miscTotal"]);}
-                        @*More than the total has been spent*@
+                        @{double remainingM = item.MiscLimit - ViewBag.BudgetTotals[5];}
                         @if (remainingM <= 0)
                         {
                             <h5 style="margin-left:150px;"><span style="color:#e6c5c4">$@remainingM.ToString("#,##0.00")</span></h5>
                         }
-
-                        @*Still some of the budget left*@
                         else
                         {
                             <h5 style="margin-left:150px;"><span style="color:#54b798">$@remainingM.ToString("#,##0.00")</span></h5>
@@ -353,7 +323,7 @@ else
                             remainingM = 0;
                         }
                         <h2 id="totalBudgetM" style="display:none">@remainingM</h2>
-                        <h2 id="totalSpentM" style="display:none">@Convert.ToInt32(TempData["miscTotal"])</h2>
+                        <h2 id="totalSpentM" style="display:none">@ViewBag.BudgetTotals[5]</h2>
                     </div>
                 </div>
             </div>
@@ -369,11 +339,6 @@ else
     #Total Remaining Budget {
         color: #cfd8dc !important;
     }
-
-    .lightBrown-hover:hover {
-        background-color: #424242 !important;
-    }
-
 </style>
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -383,13 +348,12 @@ else
 
     $(document).ready(function () {
         $('.tooltipped').tooltip();
-        donutChartGrocery()
-        donutChartHousing()
-        donutChartEntertainment()
-        donutChartBills()
-        donutChartGas()
-        donutChartMisc()
-        //donutChartTotal();
+        donutChartGrocery();
+        donutChartHousing();
+        donutChartEntertainment();
+        donutChartBills();
+        donutChartGas();
+        donutChartMisc();
     });
 
     $('#unhide-set-budget-form').on('click', function () {
@@ -413,11 +377,11 @@ else
                     bold: true,
                     fontName: 'arial',
                 }
-                , title: 'Food/Groceries',
+                , title: 'Grocery | Restaurant ',
                 fontSize: 17,
                 colors: ['#e6c5c4', '#54b798'],
                 pieHole: 0.5,
-                backgroundColor: 'black',
+                backgroundColor: '#080C10',
                 color: '#cfd8dc',
                 is3D: true,
             };
@@ -443,11 +407,11 @@ else
                     bold: true,
                     fontName: 'arial',
                 }
-                , title: 'Housing/Rent',
+                , title: 'Mortgage | Rent',
                 fontSize: 17,
                 colors: ['#e6c5c4', '#54b798'],
                 pieHole: 0.5,
-                backgroundColor: 'black',
+                backgroundColor: '#080C10',
                 color: '#ffffff',
                 is3D: true,
             };
@@ -477,7 +441,7 @@ else
                 fontSize: 17,
                 colors: ['#e6c5c4', '#54b798'],
                 pieHole: 0.5,
-                backgroundColor: 'black',
+                backgroundColor: '#080C10',
                 color: '#cfd8dc',
                 is3D: true,
             };
@@ -503,11 +467,11 @@ else
                     bold: true,
                     fontName: 'arial',
                 }
-                , title: 'Bills',
+                , title: 'Bills | Payments',
                 fontSize: 17,
                 colors: ['#e6c5c4', '#54b798'],
                 pieHole: 0.5,
-                backgroundColor: 'black',
+                backgroundColor: '#080C10',
                 color: '#cfd8dc',
                 is3D: true,
             };
@@ -533,11 +497,11 @@ else
                     bold: true,
                     fontName: 'arial',
                 }
-                , title: 'Gas/Car',
+                , title: 'Gas | Auto',
                 fontSize: 17,
                 colors: ['#e6c5c4', '#54b798'],
                 pieHole: 0.5,
-                backgroundColor: 'black',
+                backgroundColor: '#080C10',
                 color: '#cfd8dc',
                 is3D: true,
             };
@@ -567,7 +531,7 @@ else
                 fontSize: 17,
                 colors: ['#e6c5c4', '#54b798'],
                 pieHole: 0.5,
-                backgroundColor: 'black',
+                backgroundColor: '#080C10',
                 color: '#cfd8dc',
                 is3D: true,
             };
