--- a/MyWebsite/Views/Projects/Index.cshtml
+++ b/MyWebsite/Views/Projects/Index.cshtml
@@ -4,7 +4,7 @@
 
 
 <div style="margin: 50px;">
-    <h3 style="margin-top:100px; text-align:center;font-weight:200; padding-bottom:10px; letter-spacing:1.5px; border-bottom: 1px dotted #cfd8dc;">PROJECTS</h3>
+    <h3 style="margin-top:100px; text-align:center;font-weight:200; padding-bottom:10px; letter-spacing:1.5px; text-decoration:  underline">PROJECTS</h3>
     <div class="row">
         @*GITHUB*@
         <div class="col l4 m12 s12">
@@ -79,11 +79,3 @@
     </div>
 </div>
 
-
-<style>
-    footer {
-        position: fixed;
-        width: 100%;
-        bottom: 0px !important;
-    }
-</style>
