--- a/MyWebsite/Views/Shared/_LoginPartial.cshtml
+++ b/MyWebsite/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,3 @@
-@using Microsoft.AspNetCore.Identity
-@using MyWebsite.Models
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @model int
@@ -14,10 +12,10 @@
         <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
             <ul id="buttonInLine">
                 <li>
-                    <a class="hover-underline userName" asp-area="" asp-controller="Manage" asp-action="Index" title="Manage" style="font-size:20px;">Hello @User.Identity.Name!</a>
+                    <a class="hover-underline userName" asp-area="" asp-controller="Manage" asp-action="Index" title="Manage" style="font-size:20px; margin-right: 10px;">Hello @User.Identity.Name!</a>
                 </li>
                 <li>
-                    <button type="submit" class="waves-effect waves-light black btn sharpCorners lightTeal-icon-hover fas fa-sign-out-alt " style="color:#81cac4; font-size: 23px; font-weight:bold;"></button>
+                    <button type="submit" class="waves-effect waves-light btn sharpCorners black-btn fas fa-sign-out-alt " style="background-color: #080C10; font-size: 23px;"></button>
                 </li>
             </ul>
         </form>
@@ -27,8 +25,8 @@ else
 {
     <div class="container">
         <ul id="buttonInLine">
-            <li><a asp-area="" asp-controller="Account" asp-action="Register" class="waves-effect waves-light lightTeal-hover btn sharpCorners" style="background-color:#81cac4; color: black !important; font-size: 19px; font-weight: bold; color:#81cac4">Register</a></li>
-            <li><a href='@Url.Action("Login", "Account", new { AppType = Model}, null)' class="waves-effect waves-light lightTeal-hover btn sharpCorners" style="background-color:#81cac4; color: black !important; font-weight: bold; font-size: 19px;">Log in</a></li>
+            <li><a asp-area="" asp-controller="Account" asp-action="Register" class="waves-effect waves-light btn sharpCorners black-btn" style="margin-right: 5px;">Register</a></li>
+            <li><a href='@Url.Action("Login", "Account", new { AppType = Model}, null)' class="waves-effect waves-light btn sharpCorners black-btn">Log in</a></li>
 
         </ul>
     </div>
